# learning-new-tech

./: README.md
learn_c++/: STATUS
learn_c++/cmake_starter/: CMakeLists.txt  cmake_and_build.sh
learn_c++/cmake_starter/lib/: CMakeLists.txt
learn_c++/cmake_starter/tests/: CMakeLists.txt
learn_c++/learn_c++/: MyString.h  complex_number.h  header1.h  header2.h  main.cpp  thread_practice.h  thread_safe_queue.h  vector.h
learn_c++/learn_c++.xcodeproj/: project.pbxproj
learn_c++/my_stl/: test.sh
learn_c++/my_stl/app/: CMakeLists.txt
learn_c++/my_stl/include/: vector.h
learn_c++/my_stl/lib/: CMakeLists.txt
learn_c++/my_stl/tests/: CMakeLists.txt  vector_test.cpp
learn_markdown/: learn_md.md
learn_opencv_c++/: CMakeLists.txt  main.cpp
learn_vim/: learn_vim.md
learning-gatsby/hello-world/: gatsby-config.js  package-lock.json
learning-gatsby/hello-world/src/components/: container.js  header.js
learning-gatsby/hello-world/src/pages/: about-css-modules.js  about.js  contact.js  index.js
learning-gatsby/tutorial-part-four/: gatsby-node.js  package-lock.json  package.json
learning-gatsby/tutorial-part-four/src/components/: layout.js
learning-gatsby/tutorial-part-four/src/pages/: about.js  index.js  my-files.js
learning-gatsby/tutorial-part-four/src/templates/: blog-post.js
learning-gatsby/tutorial-part-three/src/components/: layout.js
learning-gatsby/tutorial-part-three/src/pages/: about.js  (+2 more)
learning-gstreamer/gstreamer-tutorials/gstreamer-tutorials/: main.c
learning-gstreamer/gstreamer-tutorials/gstreamer-tutorials.xcodeproj/: project.pbxproj
logs/: using-pyenv-and-nvm-together.md
(+4 files in other folders)
